chore: in process of refactoring - wallet adapter canary
